# frenscan-substream

./: .gitignore  Cargo.toml  Makefile  README.md  buf.gen.yaml  build.rs  docker-compose.yml  schema.sql  set_initial_block.sh  substreams.yaml
examples/: citydao.yaml
proto/: frenscan.proto
src/: db_out.rs  lib.rs
src/abi/: mod.rs
src/frensfile/: mod.rs
src/pb/: frenscan.types.v1.rs  mod.rs
