[package]
name = "frenscan-substream"
version = "0.1.0"
description = "A Substream to track Ethereum and Token balances for a group of accounts"
edition = "2021"
repository = "https://github.com/johnkozan/frenscan-substream"
license = "Apache 2.0"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17"
hex-literal = "0.3.4"
lazy_static = "1.4.0"
prost = "0.11"
substreams = "0.5.10"
substreams-database-change = "1.2.1"
substreams-ethereum = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
num-bigint = "0.4"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
indoc = "2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
substreams-ethereum = "0.9.4"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
